--- a/Xcepetion.ipynb
+++ b/Xcepetion.ipynb
@@ -327,19 +327,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# imports\n",
     "from keras.layers import *\n",
@@ -355,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -402,14 +394,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading data from https://github.com/fchollet/deep-learning-models/releases/download/v0.4/xception_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
       "Model Loaded!\n"
      ]
     }
@@ -431,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -445,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -457,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -471,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
@@ -489,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -500,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
@@ -553,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
@@ -567,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -580,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -590,12 +581,162 @@
       "\n",
       "Starting to Tune Model\n",
       "\n",
-      "Epoch 1/2\n",
-      "63/64 [============================>.] - ETA: 2s - loss: 0.9997 - acc: 0.5140Epoch 00000: val_acc improved from -inf to 0.54861, saving model to weights-improvement-00-0.55.hdf5\n",
-      "64/64 [==============================] - 206s - loss: 0.9986 - acc: 0.5147 - val_loss: 0.9605 - val_acc: 0.5486\n",
-      "Epoch 2/2\n",
-      "63/64 [============================>.] - ETA: 1s - loss: 0.9171 - acc: 0.5830Epoch 00001: val_acc improved from 0.54861 to 0.55556, saving model to weights-improvement-01-0.56.hdf5\n",
-      "64/64 [==============================] - 185s - loss: 0.9170 - acc: 0.5836 - val_loss: 0.9544 - val_acc: 0.5556\n",
+      "Epoch 1/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.9920 - acc: 0.5258Epoch 00000: val_acc improved from -inf to 0.54630, saving model to weights-improvement-00-0.55.hdf5\n",
+      "64/64 [==============================] - 224s - loss: 0.9922 - acc: 0.5244 - val_loss: 0.9694 - val_acc: 0.5463\n",
+      "Epoch 2/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.9468 - acc: 0.5743Epoch 00001: val_acc improved from 0.54630 to 0.54861, saving model to weights-improvement-01-0.55.hdf5\n",
+      "64/64 [==============================] - 197s - loss: 0.9492 - acc: 0.5742 - val_loss: 0.9654 - val_acc: 0.5486\n",
+      "Epoch 3/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.9071 - acc: 0.5802Epoch 00002: val_acc did not improve\n",
+      "64/64 [==============================] - 197s - loss: 0.9034 - acc: 0.5829 - val_loss: 0.9558 - val_acc: 0.5463\n",
+      "Epoch 4/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.8749 - acc: 0.6038Epoch 00003: val_acc improved from 0.54861 to 0.56944, saving model to weights-improvement-03-0.57.hdf5\n",
+      "64/64 [==============================] - 197s - loss: 0.8743 - acc: 0.6051 - val_loss: 0.9229 - val_acc: 0.5694\n",
+      "Epoch 5/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.8555 - acc: 0.6157Epoch 00004: val_acc did not improve\n",
+      "64/64 [==============================] - 196s - loss: 0.8534 - acc: 0.6168 - val_loss: 0.9575 - val_acc: 0.5278\n",
+      "Epoch 6/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.8512 - acc: 0.6050Epoch 00005: val_acc improved from 0.56944 to 0.58796, saving model to weights-improvement-05-0.59.hdf5\n",
+      "64/64 [==============================] - 196s - loss: 0.8519 - acc: 0.6024 - val_loss: 0.9095 - val_acc: 0.5880\n",
+      "Epoch 7/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.8511 - acc: 0.5976Epoch 00006: val_acc did not improve\n",
+      "64/64 [==============================] - 196s - loss: 0.8494 - acc: 0.5990 - val_loss: 0.9259 - val_acc: 0.5764\n",
+      "Epoch 8/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.8185 - acc: 0.6266Epoch 00007: val_acc did not improve\n",
+      "64/64 [==============================] - 196s - loss: 0.8195 - acc: 0.6266 - val_loss: 0.9108 - val_acc: 0.5764\n",
+      "Epoch 9/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.8339 - acc: 0.6137Epoch 00008: val_acc did not improve\n",
+      "64/64 [==============================] - 197s - loss: 0.8338 - acc: 0.6139 - val_loss: 0.9081 - val_acc: 0.5856\n",
+      "Epoch 10/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.8199 - acc: 0.6248Epoch 00009: val_acc did not improve\n",
+      "64/64 [==============================] - 196s - loss: 0.8185 - acc: 0.6258 - val_loss: 0.9125 - val_acc: 0.5671\n",
+      "Epoch 11/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.7945 - acc: 0.6320Epoch 00010: val_acc did not improve\n",
+      "64/64 [==============================] - 197s - loss: 0.7954 - acc: 0.6319 - val_loss: 0.9356 - val_acc: 0.5810\n",
+      "Epoch 12/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.8215 - acc: 0.6156Epoch 00011: val_acc improved from 0.58796 to 0.60185, saving model to weights-improvement-11-0.60.hdf5\n",
+      "64/64 [==============================] - 196s - loss: 0.8220 - acc: 0.6167 - val_loss: 0.9225 - val_acc: 0.6019\n",
+      "Epoch 13/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.7622 - acc: 0.6487Epoch 00012: val_acc did not improve\n",
+      "64/64 [==============================] - 196s - loss: 0.7619 - acc: 0.6483 - val_loss: 0.9621 - val_acc: 0.5417\n",
+      "Epoch 14/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.8038 - acc: 0.6246Epoch 00013: val_acc did not improve\n",
+      "64/64 [==============================] - 198s - loss: 0.8046 - acc: 0.6266 - val_loss: 0.9317 - val_acc: 0.5833\n",
+      "Epoch 15/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.8037 - acc: 0.6501Epoch 00014: val_acc did not improve\n",
+      "64/64 [==============================] - 197s - loss: 0.8027 - acc: 0.6517 - val_loss: 0.9302 - val_acc: 0.5856\n",
+      "Epoch 16/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.7894 - acc: 0.6435Epoch 00015: val_acc did not improve\n",
+      "64/64 [==============================] - 195s - loss: 0.7893 - acc: 0.6412 - val_loss: 0.9534 - val_acc: 0.5185\n",
+      "Epoch 17/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.7654 - acc: 0.6591Epoch 00016: val_acc did not improve\n",
+      "64/64 [==============================] - 196s - loss: 0.7639 - acc: 0.6596 - val_loss: 0.9099 - val_acc: 0.5995\n",
+      "Epoch 18/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.7931 - acc: 0.6375Epoch 00017: val_acc did not improve\n",
+      "64/64 [==============================] - 196s - loss: 0.7940 - acc: 0.6363 - val_loss: 0.9213 - val_acc: 0.5880\n",
+      "Epoch 19/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.7507 - acc: 0.6804Epoch 00018: val_acc did not improve\n",
+      "64/64 [==============================] - 196s - loss: 0.7522 - acc: 0.6786 - val_loss: 0.9570 - val_acc: 0.5394\n",
+      "Epoch 20/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.7273 - acc: 0.6598Epoch 00019: val_acc did not improve\n",
+      "64/64 [==============================] - 195s - loss: 0.7274 - acc: 0.6583 - val_loss: 0.9281 - val_acc: 0.5741\n",
+      "Epoch 21/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.7849 - acc: 0.6395Epoch 00020: val_acc did not improve\n",
+      "64/64 [==============================] - 195s - loss: 0.7832 - acc: 0.6412 - val_loss: 0.9291 - val_acc: 0.5741\n",
+      "Epoch 22/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.7331 - acc: 0.6717Epoch 00021: val_acc did not improve\n",
+      "64/64 [==============================] - 196s - loss: 0.7341 - acc: 0.6729 - val_loss: 0.9435 - val_acc: 0.5671\n",
+      "Epoch 23/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.7744 - acc: 0.6469Epoch 00022: val_acc did not improve\n",
+      "64/64 [==============================] - 195s - loss: 0.7773 - acc: 0.6456 - val_loss: 0.9250 - val_acc: 0.5810\n",
+      "Epoch 24/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.7422 - acc: 0.6771Epoch 00023: val_acc did not improve\n",
+      "64/64 [==============================] - 196s - loss: 0.7417 - acc: 0.6783 - val_loss: 0.9345 - val_acc: 0.5972\n",
+      "Epoch 25/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.7105 - acc: 0.6962Epoch 00024: val_acc did not improve\n",
+      "64/64 [==============================] - 195s - loss: 0.7128 - acc: 0.6951 - val_loss: 0.9380 - val_acc: 0.5764\n",
+      "Epoch 26/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.7437 - acc: 0.6667Epoch 00025: val_acc did not improve\n",
+      "64/64 [==============================] - 195s - loss: 0.7447 - acc: 0.6671 - val_loss: 0.9455 - val_acc: 0.5625\n",
+      "Epoch 27/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.6998 - acc: 0.6906Epoch 00026: val_acc did not improve\n",
+      "64/64 [==============================] - 196s - loss: 0.6984 - acc: 0.6915 - val_loss: 0.9434 - val_acc: 0.5810\n",
+      "Epoch 28/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.7358 - acc: 0.6690Epoch 00027: val_acc did not improve\n",
+      "64/64 [==============================] - 196s - loss: 0.7358 - acc: 0.6703 - val_loss: 0.9536 - val_acc: 0.5625\n",
+      "Epoch 29/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.7024 - acc: 0.6950Epoch 00028: val_acc did not improve\n",
+      "64/64 [==============================] - 195s - loss: 0.7058 - acc: 0.6919 - val_loss: 0.9697 - val_acc: 0.5347\n",
+      "Epoch 30/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.7200 - acc: 0.6834Epoch 00029: val_acc did not improve\n",
+      "64/64 [==============================] - 197s - loss: 0.7176 - acc: 0.6844 - val_loss: 0.9698 - val_acc: 0.5833\n",
+      "Epoch 31/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.7250 - acc: 0.6774Epoch 00030: val_acc did not improve\n",
+      "64/64 [==============================] - 197s - loss: 0.7252 - acc: 0.6756 - val_loss: 0.9602 - val_acc: 0.5856\n",
+      "Epoch 32/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.7084 - acc: 0.6864Epoch 00031: val_acc did not improve\n",
+      "64/64 [==============================] - 196s - loss: 0.7064 - acc: 0.6864 - val_loss: 0.9647 - val_acc: 0.5694\n",
+      "Epoch 33/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.7144 - acc: 0.6824Epoch 00032: val_acc did not improve\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "64/64 [==============================] - 196s - loss: 0.7144 - acc: 0.6825 - val_loss: 0.9885 - val_acc: 0.5486\n",
+      "Epoch 34/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.7011 - acc: 0.6928Epoch 00033: val_acc did not improve\n",
+      "64/64 [==============================] - 195s - loss: 0.7023 - acc: 0.6907 - val_loss: 0.9674 - val_acc: 0.5833\n",
+      "Epoch 35/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.7170 - acc: 0.6921Epoch 00034: val_acc did not improve\n",
+      "64/64 [==============================] - 197s - loss: 0.7208 - acc: 0.6891 - val_loss: 0.9486 - val_acc: 0.5671\n",
+      "Epoch 36/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.7008 - acc: 0.6925Epoch 00035: val_acc did not improve\n",
+      "64/64 [==============================] - 194s - loss: 0.7001 - acc: 0.6944 - val_loss: 0.9499 - val_acc: 0.5880\n",
+      "Epoch 37/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.7237 - acc: 0.6838Epoch 00036: val_acc did not improve\n",
+      "64/64 [==============================] - 196s - loss: 0.7220 - acc: 0.6849 - val_loss: 0.9385 - val_acc: 0.5810\n",
+      "Epoch 38/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.6870 - acc: 0.7149Epoch 00037: val_acc did not improve\n",
+      "64/64 [==============================] - 196s - loss: 0.6868 - acc: 0.7135 - val_loss: 0.9373 - val_acc: 0.5694\n",
+      "Epoch 39/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.6916 - acc: 0.6854Epoch 00038: val_acc did not improve\n",
+      "64/64 [==============================] - 195s - loss: 0.6899 - acc: 0.6854 - val_loss: 0.9664 - val_acc: 0.5648\n",
+      "Epoch 40/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.6908 - acc: 0.6998Epoch 00039: val_acc did not improve\n",
+      "64/64 [==============================] - 197s - loss: 0.6920 - acc: 0.6996 - val_loss: 0.9669 - val_acc: 0.5694\n",
+      "Epoch 41/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.6996 - acc: 0.6826Epoch 00040: val_acc did not improve\n",
+      "64/64 [==============================] - 196s - loss: 0.7037 - acc: 0.6807 - val_loss: 0.9814 - val_acc: 0.5347\n",
+      "Epoch 42/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.6916 - acc: 0.6997Epoch 00041: val_acc did not improve\n",
+      "64/64 [==============================] - 196s - loss: 0.6920 - acc: 0.7005 - val_loss: 0.9396 - val_acc: 0.5694\n",
+      "Epoch 43/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.6687 - acc: 0.7027Epoch 00042: val_acc did not improve\n",
+      "64/64 [==============================] - 195s - loss: 0.6652 - acc: 0.7054 - val_loss: 0.9771 - val_acc: 0.5579\n",
+      "Epoch 44/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.7080 - acc: 0.6903Epoch 00043: val_acc did not improve\n",
+      "64/64 [==============================] - 195s - loss: 0.7060 - acc: 0.6913 - val_loss: 0.9929 - val_acc: 0.5694\n",
+      "Epoch 45/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.6786 - acc: 0.6933Epoch 00044: val_acc did not improve\n",
+      "64/64 [==============================] - 196s - loss: 0.6779 - acc: 0.6913 - val_loss: 0.9632 - val_acc: 0.5694\n",
+      "Epoch 46/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.6733 - acc: 0.7116Epoch 00045: val_acc did not improve\n",
+      "64/64 [==============================] - 197s - loss: 0.6723 - acc: 0.7132 - val_loss: 0.9779 - val_acc: 0.5486\n",
+      "Epoch 47/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.6859 - acc: 0.6945Epoch 00046: val_acc did not improve\n",
+      "64/64 [==============================] - 195s - loss: 0.6854 - acc: 0.6954 - val_loss: 0.9744 - val_acc: 0.5417\n",
+      "Epoch 48/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.6382 - acc: 0.7233Epoch 00047: val_acc did not improve\n",
+      "64/64 [==============================] - 195s - loss: 0.6416 - acc: 0.7218 - val_loss: 0.9633 - val_acc: 0.5579\n",
+      "Epoch 49/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.6565 - acc: 0.7233Epoch 00048: val_acc did not improve\n",
+      "64/64 [==============================] - 197s - loss: 0.6563 - acc: 0.7208 - val_loss: 0.9762 - val_acc: 0.5556\n",
+      "Epoch 50/50\n",
+      "63/64 [============================>.] - ETA: 2s - loss: 0.6891 - acc: 0.7040Epoch 00049: val_acc did not improve\n",
+      "64/64 [==============================] - 196s - loss: 0.6903 - acc: 0.7018 - val_loss: 0.9813 - val_acc: 0.5810\n",
       "Finished tuning\n"
      ]
     }
@@ -614,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
